Fixed an issue where the checkbox text went off screen

--- a/webapp/src/main/webapp/resources/css/style.css
+++ b/webapp/src/main/webapp/resources/css/style.css
@@ -1,6 +1,6 @@
 .margin-container {
-    margin-left: 1%;
-    margin-right: 1%
+    margin-left: 0.2%;
+    margin-right: 0.2%
 }
 
 .train-canvas {
